0.74.00 2002-NOV-

-Supporting non-doublebuffered devices

0.73.00 2002-NOV-14

-Better display for small screen
-Show the default skill in skill list
-Exit works in skill list
-Two-player game message changes
-Thinking message
-Company logo :-)

0.72.00 2002-NOV-07

-End game statistics
-Supporting proguard-1.4 obfuscator
-Ant: automatic jad file calculate
-Ant: fixes for Windows
-Detecting draw
-Minimax code changes

0.71.00 2002-OCT-22

-Ant improvements

0.70.00 2002-OCT-12

-Two Player Mode
-Level Change during game
-Icon
-Using Ant build tool
-Optional use of obfuscator (retroguard-1.1)
-Using heuristic point calculation
-AI: Killer Move
-AI: Move Order
-AI: Turned on Alpha-Beta cut
-Pass Info

0.62.00 2002-SEP-28

-About Box
-Level Change
-Display bugfixes
-Color Display (if available)
-AI bugfix

0.61.00 2002-SEP-21

-Less memory usage (BitSet storage)
-build and run scripts for Windows

0.60.00 2002-SEP-16

-First version