@@ -1,6 +1,7 @@
 0.74.00 2002-NOV-
 
 -Supporting non-doublebuffered devices
+-Background color for color display
 
 0.73.00 2002-NOV-14
 
